--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+    display: flex;
+}
+
+#reset-button {
+    margin: 40px;
+    border: solid 3px blue;
+    background-color: rgb(100, 185, 255);;
+}
+
 #main-container {
     display: flex;
     flex-direction: column;
@@ -20,7 +30,7 @@
 
 .tile {
     width: 6%;
-    /* border: solid 0.5px; */
+    border: solid 0.5px;
 }
 
 /* .tile:nth-child(2n) {
